--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,18 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+default = []
+debug = ["my_plugin/debug", "bevy-inspector-egui"]
+
 # TODO delete features = ["dynamic"] before releasing
 [dependencies]
 bevy = { version = "0.7", features = ["dynamic"] }
+my_plugin = { path = "my_plugin" }
+
+bevy-inspector-egui = { version = "0.11", optional = true }
+
+[workspace]
+members = [
+    "my_plugin"
+]
