--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,20 +3,11 @@ name = "my_game"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[features]
-default = []
-debug = ["my_plugin/debug", "bevy-inspector-egui"]
-
-# TODO delete features = ["dynamic"] before releasing
 [dependencies]
-bevy = { version = "0.7", features = ["dynamic"] }
-my_plugin = { path = "my_plugin" }
+bevy = "0.8"
+bevy-inspector-egui = "0.12"
 
-bevy-inspector-egui = { version = "0.11", optional = true }
-
-[workspace]
-members = [
-    "my_plugin"
-]
+[profile.dev.package."*"]
+opt-level = 3
+[profile.dev]
+opt-level = 1
