--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 bevy = "0.8"
 bevy-inspector-egui = "0.12"
+regex = "1.5.4"
 
 [profile.dev.package."*"]
 opt-level = 3
