--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 [dependencies]
 bevy = "0.10"
 bevy-inspector-egui = "0.18.1"
+bevy_ecs_tilemap = "0.10"
+tiled = { version = "0.10.2", default-features = false }
+anyhow = "1.0.70"
 
 [profile.dev.package."*"]
 opt-level = 3
