--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = "0.10"
-bevy-inspector-egui = "0.18.1"
-bevy_ecs_tilemap = "0.10"
-tiled = { version = "0.10.2", default-features = false }
-anyhow = "1.0.70"
+bevy = "0.10.1"
+bevy-inspector-egui = "0.18.3"
+bevy_ecs_tilemap = { path = "../bevy_ecs_tilemap", version = "0.10" }
+bevy_asset_loader = "0.16.0"
 
 [profile.dev.package."*"]
 opt-level = 3
