--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = "0.11.2"
-bevy-inspector-egui = "0.19.0"
-bevy_ecs_tilemap = { path = "../bevy_ecs_tilemap", version = "0.11" }
+bevy = "0.12.0"
+bevy-inspector-egui = "0.21.0"
+bevy_ecs_tilemap = { path = "../bevy_ecs_tilemap" }
 #bevy_mod_picking = { path = "../bevy_mod_picking" }
-bevy_mod_picking = "0.15.0"
-bevy_asset_loader = "0.17.0"
+bevy_mod_picking = "0.17.0"
+bevy_asset_loader = "0.18.0"
 
 [profile.dev.package."*"]
 opt-level = 3
