--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,13 @@ edition = "2021"
 bevy = "0.12.0"
 bevy-inspector-egui = "0.21.0"
 bevy_ecs_tilemap = { path = "../bevy_ecs_tilemap" }
-#bevy_mod_picking = { path = "../bevy_mod_picking" }
 bevy_mod_picking = "0.17.0"
 bevy_asset_loader = "0.18.0"
 
-[profile.dev.package."*"]
-opt-level = 3
+# Enable a small amount of optimization in debug mode
 [profile.dev]
 opt-level = 1
+
+# Enable hight optimizations for dependencies (incl. Bevy), but not for our code:
+[profile.dev.package."*"]
+opt-level = 3
