--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = "0.14.0"
-bevy-inspector-egui = "0.25.0"
-bevy_mod_picking = "0.20.0"
+bevy = { version = "0.14.1", features = ["bevy_dev_tools"]}
+bevy-inspector-egui = "0.25.2"
 bevy_asset_loader = "0.21.0"
+glam = "0.27.0"
+isometric = { version = "0.1.0", path = "../bevy_projects/iso" }
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
