--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-# TODO serde
 #bevy = { version = "0.14.2", features = ["bevy_dev_tools"] }
-bevy = { version = "0.14.2", features = ["bevy_dev_tools"] }
+bevy = { features = ["bevy_dev_tools", "trace"], path = "../bevy_testing/bevy" }
 #bevy-inspector-egui = "0.27.0"
-glam = "0.27.0"
+serde = { version = "1.0", features = ["derive"] }
+ron = "0.8"
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
@@ -17,3 +17,7 @@ opt-level = 1
 # Enable hight optimizations for dependencies (incl. Bevy), but not for our code:
 [profile.dev.package."*"]
 opt-level = 3
+
+# This is for flamegraph to show debug simbols on release
+[profile.release]
+debug = true
