--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ edition = "2021"
 
 [dependencies]
 #bevy = { features = ["bevy_dev_tools"], path = "../bevy_testing/bevy" }
-bevy = { features = ["bevy_dev_tools"], version = "0.15.1" }
+bevy = { features = ["bevy_dev_tools"], version = "0.15.2" }
+bevy_reflect = "0.15.2"
 bevy-inspector-egui = "0.29.1"
 
 serde = { version = "1.0", features = ["derive"] }
