--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,17 @@
 [package]
 name = "my_game"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 [dependencies]
-#bevy = { features = ["bevy_dev_tools"], path = "../bevy_testing/bevy" }
-bevy = { features = ["bevy_dev_tools"], version = "0.15.2" }
-bevy_reflect = "0.15.2"
-bevy-inspector-egui = "0.29.1"
+bevy = { features = ["bevy_dev_tools"], path = "../bevy_testing/bevy" }
+#bevy = { features = ["bevy_dev_tools"], version = "0.15.2" }
+# this is commented because using local bevy was giving problems
+#bevy_reflect = "0.15.2"
+bevy-inspector-egui = "0.30.0"
 
 serde = { version = "1.0", features = ["derive"] }
-ron = "0.8"
+ron = "0.9"
 noise = { path = "../bevy_testing/noise-rs", features = ["images"] }
 rand = "0.9"
 
